--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,6 +1,6 @@
 # Compiler and Flags
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -I.
 DEPFLAGS = -MMD -MP
 
 # Target executable name
